bugfix: footer text on small screens
footer text is now working well on screens as small as 280 px wide

at 280 px wide the header text breaks but this width is not in popular use today

--- a/style.css
+++ b/style.css
@@ -316,12 +316,13 @@ body>div #next.grayed-out-button {
 
 /* centers footer & places it at bottom of page */
 footer {
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 8px;
+    margin: auto auto 8px auto;
     font-family: Poppins;
 }
+
+footer p {
+    text-align: center;
+} 
 
 @media screen and (max-width: 1000px) {
     h1 {
